--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/linlay"
+    android:layout_margin="20dp"
+    android:background="#ffffff"
     android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
